streamlit/streamlit-app-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-app-master
  labels:
    app: streamlit-app-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit-app-master
  template:
    metadata:
      labels:
        app: streamlit-app-master
    spec:
      containers:
      - name: streamlit-app-master
        image: kubeflow-registry.default.svc.cluster.local:30000/streamlit-app:master
        ports:
        - containerPort: 8501
          name: streamlit-port
